--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.1",
@@ -22,7 +23,6 @@
     "fs": "^0.0.1-security",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.8",
-    "pdfkit": "^0.14.0",
-    "puppeteer": "^21.10.0"
+    "pdfkit": "^0.14.0"
   }
 }
