--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs": "^0.0.1-security",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.8",
-    "pdfkit": "^0.14.0"
+    "pdfkit": "^0.14.0",
+    "puppeteer": "^21.10.0"
   }
 }
