--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "jspdf": "^2.5.1",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.8",
     "pdfkit": "^0.14.0",
