--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URI = mongodb+srv://samsulmuhyidin:VCeju4Mm962y2EUV@pkkmb-2024.nhch5fl.mongodb.net/pmb?retryWrites=true&w=majority
+DATABASE_URI = mongodb+srv://cobacoba:coba123@cluster0.awlpkpa.mongodb.net/pkkmb?retryWrites=true&w=majority
 SECRET_EMAIL_SENDER = stikombanyuwangipmb@gmail.com
 SECRET_EMAIL_AUTH = gusn zhom vbqi touc
