--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
